--- a/application/modules/default/views/scripts/product/viewscripts/input_tags_user.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_tags_user.phtml
@@ -21,15 +21,10 @@
  **/
 
 $this->headLink()->appendStylesheet('/theme/flatui/css/select2.min.css');
+$this->headLink()->appendStylesheet('/theme/flatui/css/select2.custmized.css');
 $this->inlineScript()->appendFile('/theme/flatui/js/lib/select2.min.js');
 ?>
-<style type="text/css">
-    .taggingSelect2{
-      width: 500px;
-    }
 
-
-</style>
 <div class="form-group">
     <div class="col-sm-12 margin-top-15">
         <?php if ($this->element->isRequired()) { ?>
