--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1750,6 +1750,47 @@ ul.meta-nav-top
           display: block; 
           font-weight: normal;
         }
+        .topics{
+              padding-right: 20px;
+              float: right;
+
+            .topic-tag
+            {
+                display: inline-block;
+                padding: 0.3em 0.9em;
+                margin: 0 0.5em 0.5em 0;
+                white-space: nowrap;
+                background-color: #f1f8ff;
+                border-radius: 3px;
+            }
+            .topic-tag-link
+            {
+                &:hover {
+                      text-decoration: none;
+                      background-color: #def;
+                  }
+
+            } 
+            .btn-link{
+                display: inline-block;
+                padding: 0;
+                font-size: inherit;
+                color: #0366d6;
+                text-decoration: none;
+                white-space: nowrap;
+                cursor: pointer;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                background-color: transparent;
+                border: 0;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+            }
+        }
+        
         span.source{
             color:#4e4e4e;
         }
