--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1788,6 +1788,12 @@ ul.meta-nav-top
                 -webkit-appearance: none;
                 -moz-appearance: none;
                 appearance: none;
+                float: right;
+                padding-top: 5px;
+            }
+            .topic-tags-saved{
+              display: none; 
+              color: #5bc0de;
             }
         }
         
