--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1790,10 +1790,17 @@ ul.meta-nav-top
                 appearance: none;
                 float: right;
                 padding-top: 5px;
+                padding-left: 10px;
             }
             .topic-tags-saved{
-              display: none; 
-              color: #5bc0de;
+                display: none; 
+                color: #0366d6;
+                float: left;                
+                padding-top: 5px;
+                padding-left: 10px;
+                .fa-check{
+                  color: green;
+                }
             }
         }
         
