--- a/httpdocs/theme/flatui/less/select2.custmized.less
+++ b/httpdocs/theme/flatui/less/select2.custmized.less
@@ -1,3 +1,4 @@
+
 .select2-container--default
 {
 	.select2-selection--multiple
@@ -39,7 +40,7 @@
 }
  
 .select2-container{
-	width: 100% !important;
+	/*width: 100% !important;*/
 	}
 
 	
