--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -234,6 +234,7 @@ $this->inlineScript()->appendScript('
                                 <?= $this->form->twitter_code ?>
                                 <?= $this->form->google_code ?>
                                 
+                                <?= $this->form->project_license_id ?>
                                 <?= $this->form->tagsuser ?>
                             </section>
 
