--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -29,6 +29,14 @@ $userRoleName = $helperUserRole->userRole();
     <span class="title"> Details </span>
 
     <div class="row">
+        <span class="col-lg-6">license</span>
+        <div class="col-lg-6">
+            <span class="value">
+            <?= $this->product->project_license_title; ?> </span>
+        </div>
+    </div>
+
+    <div class="row">
         <span class="col-lg-6">version</span>
         <div class="col-lg-6">
             <span class="value">
