--- a/httpdocs/theme/flatui/less/select2.custmized.less
+++ b/httpdocs/theme/flatui/less/select2.custmized.less
@@ -39,9 +39,13 @@
 
 }
  
-.select2-container{
-	/*width: 100% !important;*/
-	}
+ .add-product-page{
+
+	.select2-container{
+		width: 100% !important;
+		}
+
+ }
 
 	
 
