updated build function for category tree

--- a/application/modules/default/views/scripts/explore/partials/filter.phtml
+++ b/application/modules/default/views/scripts/explore/partials/filter.phtml
@@ -21,7 +21,8 @@
  **/
 
 $modelCategory = new Default_Model_ProjectCategory();
-$this->categories = $modelCategory->fetchCategoryTreeCurrentStore();
+//$this->categories = $modelCategory->fetchCategoryTreeCurrentStore();
+$this->categories = $modelCategory->fetchTreeForView();
 
 $this->navBackgroundColorActive = $this->template['header-nav-tabs']['background-color-active'];
 $this->navBackgroundColor = $this->template['header-nav-tabs']['background-color'];
